# Device-SMI

./: .gitignore  DeviceSMI.py  README.md  cpu.py  device.py  model.py  nvidia.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: release.yml  unit_tests.yml
device_smi/: Device.py  DeviceSMI.py  __init__.py  amd.py  apple.py  base.py  cpu.py  device.py  intel.py  model.py  nvidia.py  os.py
format/: format.sh  ruff.toml
tests/: cpu.py  gpu.py  os.py  test_cpu.py  test_gpu.py  test_os.py  xpu.py
